img dala thoda changes kerdiya
img dala thoda changes kerdiya

--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
   <div class="row">
     <div class="col-sm-4" style="text-align: center;">
       <div class="temp">
-        <p>Max Temp: <b><span id="max_temp_c"></span>°C</b></p>
-        <p>Max Temp: <b><span id="max_temp_f"></span>°F</b></p>
+        <p>Max Temp C: <b><span id="max_temp_c"></span>°C</b></p>
+        <p>Max Temp F: <b><span id="max_temp_f"></span>°F</b></p>
       </div>
     </div>
     <div class="col-sm-4" style="text-align: center;">
       <div class="temp">
         <p>Wind speed in KPH: <b><span id="wind_kph"></span>KPH</b></p>
-        <p>Wind speed in KPH: <b><span id="wind_mph"></span>MPH</b></p>
+        <p>Wind speed in MPH: <b><span id="wind_mph"></span>MPH</b></p>
       </div>
     </div>
     <div class="col-sm-4" style="text-align: center;">
@@ -65,6 +65,7 @@
       </div>
     </div>
   </div>
+  <img src="img\img1.jpg" alt="">
   <script>
     var cityname
     function citydata(){
