--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body>
   <div class="jumbotron text-center" id="title">
-    <h1>DashBoard</h1>
+    <h1>WeatherOrNot</h1>
   </div>
     <div class="sch" style="display: flex;">
       <input type="text" class="form-control" id="name" placeholder="Search City">
