--- a/index.html
+++ b/index.html
@@ -46,9 +46,10 @@
   <div class="jumbotron text-center" id="title">
     <h1>WeatherOrNot</h1>
   </div>
-    <div class="sch" style="display: flex;">
+    <div class="sch" style="">
       <input type="text" class="form-control" id="name" placeholder="Search City">
-      <button id="x" onclick="changeit()" style="width: 20%;">Search</button>
+      <button  id="x" onclick="changeit()">Search</button>
+    </form>
     </div>
 
   <div class="container">
