--- a/index.html
+++ b/index.html
@@ -91,30 +91,30 @@
     <a href="#" title="Header" data-toggle="popover" data-trigger="hover">
     <div class="row">
       <div class="col"><div class="scrolling-container">
-        <div class="item" id="1"><div id = "pop0" title="abc" data-toggle="popover" data-trigger="hover" >  <span ><img src=""  id="img0"alt="">  </span> <span class = "time">oo:oo </span> <p id="cond0">  </p></div></div>
+        <div class="item" id="0"><div id = "pop0" title="abc" data-toggle="popover" data-trigger="hover" >  <span ><img src=""  id="img0"alt="">  </span> <span class = "time">oo:oo </span> <p id="cond0">  </p></div></div>
         <div class="item" id="1"><div id = "pop1" title="abc" data-toggle="popover" data-trigger="hover" >  <span ><img src=""  id="img1"alt="">  </span> <span class = "time">o1:oo </span> <p id="cond1">  </p></div></div>
-        <div class="item" id="1"><div id = "pop2" title="abc" data-toggle="popover" data-trigger="hover" >  <span ><img src=""  id="img2"alt="">  </span> <span class = "time">o2:oo </span> <p id="cond2">  </p></div></div>
-        <div class="item" id="1"><div id = "pop3" title="abc" data-toggle="popover" data-trigger="hover" >  <span ><img src=""  id="img3"alt="">  </span> <span class = "time">o3:oo </span> <p id="cond3">  </p></div></div>
-        <div class="item" id="1"><div id = "pop4" title="abc" data-toggle="popover" data-trigger="hover" >  <span ><img src=""  id="img4"alt="">  </span> <span class = "time">o4:oo </span> <p id="cond4">  </p></div></div>
-        <div class="item" id="1"><div id = "pop5" title="abc" data-toggle="popover" data-trigger="hover" >  <span ><img src=""  id="img5"alt="">  </span> <span class = "time">o5:oo </span> <p id="cond5">  </p></div></div>
-        <div class="item" id="1"><div id = "pop6" title="abc" data-toggle="popover" data-trigger="hover" >  <span ><img src=""  id="img6"alt="">  </span> <span class = "time">o6:oo </span> <p id="cond6">  </p></div></div>
-        <div class="item" id="1"><div id = "pop7" title="abc" data-toggle="popover" data-trigger="hover" >  <span ><img src=""  id="img7"alt="">  </span> <span class = "time">o7:oo </span> <p id="cond7">  </p></div></div>
-        <div class="item" id="1"><div id = "pop8" title="abc" data-toggle="popover" data-trigger="hover" >  <span ><img src=""  id="img8"alt="">  </span> <span class = "time">o8:oo </span> <p id="cond8">  </p></div></div>
-        <div class="item" id="1"><div id = "pop9" title="abc" data-toggle="popover" data-trigger="hover" >  <span ><img src=""  id="img9"alt="">  </span> <span class = "time">o9:oo </span> <p id="cond9">  </p></div></div>
-        <div class="item" id="1"><div id = "pop10" title="abc" data-toggle="popover" data-trigger="hover" > <span ><img src=""  id="img10"alt=""> </span> <span class = "time">10:oo </span> <p id="cond10"> </p></div></div>
-        <div class="item" id="1"><div id = "pop11" title="abc" data-toggle="popover" data-trigger="hover" > <span ><img src=""  id="img11"alt=""> </span> <span class = "time">11:oo </span> <p id="cond11"> </p></div></div>
-        <div class="item" id="1"><div id = "pop12" title="abc" data-toggle="popover" data-trigger="hover" > <span ><img src=""  id="img12"alt=""> </span> <span class = "time">12:oo </span> <p id="cond12"> </p></div></div>
-        <div class="item" id="1"><div id = "pop13" title="abc" data-toggle="popover" data-trigger="hover" > <span ><img src=""  id="img13"alt=""> </span> <span class = "time">13:oo </span> <p id="cond13"> </p></div></div>
-        <div class="item" id="1"><div id = "pop14" title="abc" data-toggle="popover" data-trigger="hover" > <span ><img src=""  id="img14"alt=""> </span> <span class = "time">14:oo </span> <p id="cond14"> </p></div></div>
-        <div class="item" id="1"><div id = "pop15" title="abc" data-toggle="popover" data-trigger="hover" > <span ><img src=""  id="img15"alt=""> </span> <span class = "time">15:oo </span> <p id="cond15"> </p></div></div>
-        <div class="item" id="1"><div id = "pop16" title="abc" data-toggle="popover" data-trigger="hover" > <span ><img src=""  id="img16"alt=""> </span> <span class = "time">16:oo </span> <p id="cond16"> </p></div></div>
-        <div class="item" id="1"><div id = "pop17" title="abc" data-toggle="popover" data-trigger="hover" > <span ><img src=""  id="img17"alt=""> </span> <span class = "time">17:oo </span> <p id="cond17"> </p></div></div>
-        <div class="item" id="1"><div id = "pop18" title="abc" data-toggle="popover" data-trigger="hover" > <span ><img src=""  id="img18"alt=""> </span> <span class = "time">18:oo </span> <p id="cond18"> </p></div></div>
-        <div class="item" id="1"><div id = "pop19" title="abc" data-toggle="popover" data-trigger="hover" > <span ><img src=""  id="img19"alt=""> </span> <span class = "time">19:oo </span> <p id="cond19"> </p></div></div>
-        <div class="item" id="1"><div id = "pop20" title="abc" data-toggle="popover" data-trigger="hover" > <span ><img src=""  id="img20"alt=""> </span> <span class = "time">20:oo </span> <p id="cond20"> </p></div></div>
-        <div class="item" id="1"><div id = "pop21" title="abc" data-toggle="popover" data-trigger="hover" > <span ><img src=""  id="img21"alt=""> </span> <span class = "time">21:oo </span> <p id="cond21"> </p></div></div>
-        <div class="item" id="1"><div id = "pop22" title="abc" data-toggle="popover" data-trigger="hover" > <span ><img src=""  id="img22"alt=""> </span> <span class = "time">22:oo </span> <p id="cond22"> </p></div></div>
-        <div class="item" id="1"><div id = "pop23" title="abc" data-toggle="popover" data-trigger="hover" > <span ><img src=""  id="img23"alt=""> </span> <span class = "time">23:oo </span> <p id="cond23"> </p></div></div>
+        <div class="item" id="2"><div id = "pop2" title="abc" data-toggle="popover" data-trigger="hover" >  <span ><img src=""  id="img2"alt="">  </span> <span class = "time">o2:oo </span> <p id="cond2">  </p></div></div>
+        <div class="item" id="3"><div id = "pop3" title="abc" data-toggle="popover" data-trigger="hover" >  <span ><img src=""  id="img3"alt="">  </span> <span class = "time">o3:oo </span> <p id="cond3">  </p></div></div>
+        <div class="item" id="4"><div id = "pop4" title="abc" data-toggle="popover" data-trigger="hover" >  <span ><img src=""  id="img4"alt="">  </span> <span class = "time">o4:oo </span> <p id="cond4">  </p></div></div>
+        <div class="item" id="5"><div id = "pop5" title="abc" data-toggle="popover" data-trigger="hover" >  <span ><img src=""  id="img5"alt="">  </span> <span class = "time">o5:oo </span> <p id="cond5">  </p></div></div>
+        <div class="item" id="6"><div id = "pop6" title="abc" data-toggle="popover" data-trigger="hover" >  <span ><img src=""  id="img6"alt="">  </span> <span class = "time">o6:oo </span> <p id="cond6">  </p></div></div>
+        <div class="item" id="7"><div id = "pop7" title="abc" data-toggle="popover" data-trigger="hover" >  <span ><img src=""  id="img7"alt="">  </span> <span class = "time">o7:oo </span> <p id="cond7">  </p></div></div>
+        <div class="item" id="8"><div id = "pop8" title="abc" data-toggle="popover" data-trigger="hover" >  <span ><img src=""  id="img8"alt="">  </span> <span class = "time">o8:oo </span> <p id="cond8">  </p></div></div>
+        <div class="item" id="9"><div id = "pop9" title="abc" data-toggle="popover" data-trigger="hover" >  <span ><img src=""  id="img9"alt="">  </span> <span class = "time">o9:oo </span> <p id="cond9">  </p></div></div>
+        <div class="item" id="10"><div id = "pop10" title="abc" data-toggle="popover" data-trigger="hover" > <span ><img src=""  id="img10"alt=""> </span> <span class = "time">10:oo </span> <p id="cond10"> </p></div></div>
+        <div class="item" id="11"><div id = "pop11" title="abc" data-toggle="popover" data-trigger="hover" > <span ><img src=""  id="img11"alt=""> </span> <span class = "time">11:oo </span> <p id="cond11"> </p></div></div>
+        <div class="item" id="12"><div id = "pop12" title="abc" data-toggle="popover" data-trigger="hover" > <span ><img src=""  id="img12"alt=""> </span> <span class = "time">12:oo </span> <p id="cond12"> </p></div></div>
+        <div class="item" id="13"><div id = "pop13" title="abc" data-toggle="popover" data-trigger="hover" > <span ><img src=""  id="img13"alt=""> </span> <span class = "time">13:oo </span> <p id="cond13"> </p></div></div>
+        <div class="item" id="14"><div id = "pop14" title="abc" data-toggle="popover" data-trigger="hover" > <span ><img src=""  id="img14"alt=""> </span> <span class = "time">14:oo </span> <p id="cond14"> </p></div></div>
+        <div class="item" id="15"><div id = "pop15" title="abc" data-toggle="popover" data-trigger="hover" > <span ><img src=""  id="img15"alt=""> </span> <span class = "time">15:oo </span> <p id="cond15"> </p></div></div>
+        <div class="item" id="16"><div id = "pop16" title="abc" data-toggle="popover" data-trigger="hover" > <span ><img src=""  id="img16"alt=""> </span> <span class = "time">16:oo </span> <p id="cond16"> </p></div></div>
+        <div class="item" id="17"><div id = "pop17" title="abc" data-toggle="popover" data-trigger="hover" > <span ><img src=""  id="img17"alt=""> </span> <span class = "time">17:oo </span> <p id="cond17"> </p></div></div>
+        <div class="item" id="18"><div id = "pop18" title="abc" data-toggle="popover" data-trigger="hover" > <span ><img src=""  id="img18"alt=""> </span> <span class = "time">18:oo </span> <p id="cond18"> </p></div></div>
+        <div class="item" id="19"><div id = "pop19" title="abc" data-toggle="popover" data-trigger="hover" > <span ><img src=""  id="img19"alt=""> </span> <span class = "time">19:oo </span> <p id="cond19"> </p></div></div>
+        <div class="item" id="20"><div id = "pop20" title="abc" data-toggle="popover" data-trigger="hover" > <span ><img src=""  id="img20"alt=""> </span> <span class = "time">20:oo </span> <p id="cond20"> </p></div></div>
+        <div class="item" id="21"><div id = "pop21" title="abc" data-toggle="popover" data-trigger="hover" > <span ><img src=""  id="img21"alt=""> </span> <span class = "time">21:oo </span> <p id="cond21"> </p></div></div>
+        <div class="item" id="22"><div id = "pop22" title="abc" data-toggle="popover" data-trigger="hover" > <span ><img src=""  id="img22"alt=""> </span> <span class = "time">22:oo </span> <p id="cond22"> </p></div></div>
+        <div class="item" id="23"><div id = "pop23" title="abc" data-toggle="popover" data-trigger="hover" > <span ><img src=""  id="img23"alt=""> </span> <span class = "time">23:oo </span> <p id="cond23"> </p></div></div>
       </div>
     </div>
   </div>
@@ -151,6 +151,20 @@
             document.getElementById('img' + i).src = fday[i].condition.icon
             document.getElementById('cond' + i).innerText = fday[i].condition.text;
             document.getElementById('pop' + i).title = 'temp in C: ' + fday[i].temp_c+ '°C\nAir quality: co = ' + fday[i].air_quality.co + '\n\t\t: no2 = ' + fday[i].air_quality.no2 + '\n\t\t: o3 = ' + fday[i].air_quality.no2;
+            var aqi = fday[i].air_quality.pm10;
+            if (aqi <= 50){
+              document.getElementById(i).style.backgroundColor = '#00B050';
+            }else if(aqi <= 100){
+              document.getElementById(i).style.backgroundColor = '#92D050';
+            }else if(aqi <= 200){
+              document.getElementById(i).style.backgroundColor = '#FFFF00';
+            }else if(aqi <= 300){
+              document.getElementById(i).style.backgroundColor = '#FF9900';
+            }else if(aqi <= 400){
+              document.getElementById(i).style.backgroundColor = '#FF0000';
+            }else if(aqi <= 500){
+              document.getElementById(i).style.backgroundColor = '#C00000';
+            }
           }
         })
     }
